# http-server

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  example-output.txt
api/: CMakeLists.txt
api/llhttp/: CMakeLists.txt  readme.md
api/llhttp/include/: llhttp.h
api/llhttp/src/: api.h  llhttp.c
api/src/: http-request-parser.cpp  http-request-parser.hpp  http-server.cpp  http-server.hpp  log.cpp  log.hpp  main.cpp  tcp-server.cpp  tcp-server.hpp  utils.hpp
example/: CMakeLists.txt
example/src/: main.cpp
http-server/: CMakeLists.txt
http-server/include/http-server/: error.hpp  functor.hpp  http-body-parser.hpp  http-info.hpp  http-request-parser.hpp  http-server.hpp  log.hpp  pch.hpp  pool-worker.hpp  pool.hpp  tcp-client.hpp  tcp-server.hpp  ulid.hpp  utils.hpp
http-server/include/http-server/db/: sqlite.hpp
http-server/include/http-server/db/tarantool/: client.hpp  enums.hpp  msgpack-ext.hpp  types.hpp
http-server/src/: error.cpp  http-body-parser.cpp  http-info.cpp  http-request-parser.cpp  http-server.cpp  log.cpp  tcp-client.cpp  tcp-server.cpp  ulid.cpp  utils.cpp
http-server/src/db/: tarantool.cpp
server/: .gitignore  CMakeLists.txt
server/api/: CMakeLists.txt
server/api/src/: main.cpp
server/core/: CMakeLists.txt
server/core/include/core/: error.hpp  functor.hpp  http-body-parser.hpp  http-info.hpp  http-request-parser.hpp  http-server.hpp  log.hpp  pool-worker.hpp  pool.hpp  tcp-server.hpp  ulid.hpp  utils.hpp
server/core/include/core/db/: sqlite.hpp
server/core/src/: error.cpp  http-body-parser.cpp  http-info.cpp  http-request-parser.cpp  http-server.cpp  log.cpp  tcp-server.cpp  ulid.cpp  utils.cpp  utils.hpp
server/core/src/db/: sqlite.cpp
